[gd_scene load_steps=8 format=2]

[ext_resource path="res://GameScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://CalibrationPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Calibration.gd" type="Script" id=3]
[ext_resource path="res://Boat.tscn" type="PackedScene" id=4]
[ext_resource path="res://SetupScene.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40.1403, 341.086 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40.1403, 239.14 )

[node name="SetupScene" type="Node2D"]
script = ExtResource( 5 )

[node name="Calibration" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Calibration"]
margin_left = 97.0
margin_top = 81.0
margin_right = 681.0
margin_bottom = 558.0
color = Color( 0.407843, 0.407843, 0.407843, 0.552941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="StaticBody2D" parent="Calibration/ColorRect"]
position = Vector2( 624, -500 )
collision_layer = 1024
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="Calibration/ColorRect/Top"]
position = Vector2( -302.518, 481.29 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Right" type="StaticBody2D" parent="Calibration/ColorRect"]
position = Vector2( 624, 36 )
collision_layer = 1024
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="Calibration/ColorRect/Right"]
position = Vector2( -0.629944, 203.477 )
shape = SubResource( 2 )

[node name="Left" type="StaticBody2D" parent="Calibration/ColorRect"]
position = Vector2( -40, 36 )
collision_layer = 1024
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="Calibration/ColorRect/Left"]
position = Vector2( 8.81946, 203.548 )
shape = SubResource( 2 )

[node name="Bottom" type="StaticBody2D" parent="Calibration/ColorRect"]
position = Vector2( 624, 36 )
collision_layer = 1024
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="Calibration/ColorRect/Bottom"]
position = Vector2( -302.518, 481.29 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Boat" parent="Calibration/ColorRect" instance=ExtResource( 4 )]
position = Vector2( 253, 119 )
scale = Vector2( 0.75, 0.75 )

[node name="CalibrationPanel" parent="Calibration" instance=ExtResource( 2 )]

[node name="SongDialog" type="FileDialog" parent="Calibration"]
margin_left = 147.651
margin_top = 139.732
margin_right = 676.651
margin_bottom = 471.732
rect_min_size = Vector2( 400, 140 )
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.ogg" )
current_dir = "/home/bobby/WaveBoard"
current_path = "/home/bobby/WaveBoard/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameScene" parent="." instance=ExtResource( 1 )]
visible = false
[connection signal="ready_to_play" from="Calibration" to="." method="_on_Calibration_ready_to_play"]
[connection signal="boat_zero_requested" from="Calibration/CalibrationPanel" to="." method="_on_CalibrationPanel_boat_zero_requested"]
[connection signal="ready_to_play" from="Calibration/CalibrationPanel" to="Calibration" method="_on_CalibrationPanel_ready_to_play"]
